--- a/src/css/mission.css
+++ b/src/css/mission.css
@@ -4,7 +4,7 @@
 /* Mobile - 360px */
 @media only screen and (min-width: 0em) {
   #sbs {
-    padding: clamp(2em, 1.5vw, 2em) 2rem;
+    padding: clamp(2em, 1.5vw, 3em) 2rem;
   }
   #sbs .cs-container {
     width: 100%;
