--- a/src/css/pricing.css
+++ b/src/css/pricing.css
@@ -4,7 +4,7 @@
 /* Mobile - 360px */
 @media only screen and (min-width: 0em) {
     #pricing {
-      padding: clamp(2em, 1.5vw, 2em) 2rem;
+      padding: clamp(2em, 1.5vw, 3em) 2rem;
     }
     #pricing .cs-container {
       width: 100%;
